fixes all randomization errors

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    A and S to turn left and right, W to accelerate in the direction you're pointing, Q to go to hyperspace
+		    A and D to turn left and right, W to accelerate in the direction you're pointing, Q to go to hyperspace
 	    </footer>
 	</body>
 </html>
