finalizes all absolute necessities for asteroidsgame

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 			<h1>Asteroids</h1>
 		</header>
 			<section id="content">
-				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Stars.pde Asteroid.pde">
+				<canvas id="AsteroidsGame" data-processing-sources="AsteroidsGame.pde Floater.pde Spaceship.pde Stars.pde Asteroid.pde Bullet.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    A and D to turn left and right, W to accelerate in the direction you're pointing, Q to go to hyperspace
+		    A and D to turn left and right, W to accelerate in the direction you're pointing, Q to go to hyperspace, and SPACE to shoot. Obliterate the asteroids!
 	    </footer>
 	</body>
 </html>
